--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 .Rproj.user
+
+# Checking the homework
+homework_checkeR.rmd
